# dilithiumcoin

./: .gitignore  README.md  api.go  blockchain.go  blockchain_test.go  build.sh  config.go  go.mod  go.sum  main.go  mempool.go  message.go  network.go  peer.go  ratelimit.go  security_test.go  storage.go  transaction.go  transaction_test.go  upnp.go  wallet.go  wallet_test.go
.github/workflows/: release.yml
cmd/dilithium-cli/: client.go  main.go  transaction.go  wallet.go
cmd/dilithium-cpu-gpu-miner/: Makefile  README.md  build.sh  go.mod  gpu_stub.go  main.go  miner.go  network.go  sha256_test.go  worker.go
cmd/dilithium-gpu-miner/: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.rs  go.mod  gpu_cuda.go  install.sh  main.go  miner.go  node_runner.go  pool.go  sha256.go
cmd/dilithium-gpu-miner/cuda/: bridge.cu  bridge.h  kernel.cu  sha256.cuh
cmd/dilithium-gpu-miner/metal/: sha256_mining.metal
cmd/dilithium-gpu-miner/src/: backend.rs  cuda.rs  main.rs  metal_backend.rs  miner.rs  network.rs  webui.rs  worker.rs
cmd/dilithium-gpu-miner/static/: dashboard.html
cmd/dilithium-miner/: display.go  main.go  miner.go  node_runner.go  pool.go  pool_worker.go
cmd/dilithium-wallet/: api_service.go  app.go  main.go  wails.json  wallet_service.go
cmd/dilithium-wallet/frontend/: index.html  package-lock.json  package.json  package.json.md5
cmd/dilithium-wallet/frontend/src/: App.svelte
cmd/dilithium-wallet/frontend/src/components/: Sidebar.svelte  TransactionRow.svelte
cmd/dilithium-wallet/frontend/src/lib/: formatters.js  stores.js
cmd/dilithium-wallet/frontend/src/views/: Dashboard.svelte  History.svelte  Receive.svelte  Send.svelte  Settings.svelte  Welcome.svelte
cmd/dilithium-wallet/frontend/wailsjs/go/: models.ts
cmd/dilithium-wallet/frontend/wailsjs/go/main/: App.d.ts  App.js
gpu-miner/: .gitignore  README.md  build.rs  install.bat
gpu-miner/src/: cuda.rs  main.rs  sha256.rs  worker.rs
gpu-miner/static/: dashboard.html
